/*
 * Copyright IBM Corp. 2018 All Rights Reserved.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

apply plugin: 'idea'
apply plugin: 'eclipse-wtp'

version = '2.0.0-SNAPSHOT'

allprojects {
    repositories {
        mavenLocal()
        jcenter()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
        maven { url 'https://jitpack.io' }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven'

    group = 'org.hyperledger.fabric-chaincode-java'
    version = rootProject.version

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    dependencies {
        compile 'commons-cli:commons-cli:1.4'
        compile 'commons-logging:commons-logging:1.2'

        testCompile 'junit:junit:4.12'
        testCompile 'org.hamcrest:hamcrest-library:1.3'
        testCompile 'org.mockito:mockito-core:2.23.0'
        testCompile 'com.github.stefanbirkner:system-rules:1.17.0'
    }

    if (!it.name.equals('fabric-chaincode-protos')) {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:all,-try" << "-Werror"
        }
    }

}

task printVersionName() {
    println rootProject.version
}
